--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <title>STC</title>
-  <link href="mystyle.css" rel="stylesheet"> 
-  </head>
+  <link href="../CSS/mystyle.css" rel="stylesheet"> </head>
 
 <body>
   <!-- <div class="jumbotron text-left" style="margin-bottom: 0"> -->
   <div class="">
     <div class="header">
       <div id="Logo">
-        <img src="PurpleLOGO-01.png" alt="Logo" width="220" height="220">
+        <img src="../IMAGES/PurpleLOGO-01.png" alt="Logo" width="220" height="220">
       </div>
       <h1 class="mainHeaderFont">Seedling Theater Company in Henderson, NV</h1>
       <div class="h2">Where young performers are grown</div>
@@ -34,38 +33,16 @@
     </div>
     <div class="content">
       <!-- mb-5 is a bootstrap class that will set the bottom margin -->
-      <div class="topnav mb-5">
-        <ul>
-          <li><a href="index.html">
-              <b>Calendar</b></a></li>
-          <li><a href="Classes.html">Classes</a>
-            <ul>
-              <li><a href="/April Classes">May Classes</a></li>
-              <li><a href="/May Classes">June Classes</a></li>
-              <li><a href="/Summer Camps">Summer Camps</a></li>
-          </li>
-        </ul>
-
-        <li><a href="Forms & Info.html">Forms</a>
-          <ul>
-            <li><a href="/Attendance">Attendance & Tardiness</a></li>
-            <li><a href="/Code of Conduct">Code of Conduct</a></li>
-            <li><a href="/Emergency Contact">Emergency Contact</a></li>
-            <li><a href="/Liability Release">Liability Release</a></li>
-            <li><a href="/Payment>">Payment Policy</a></li>
-            <li><a href="/Safety>">Safety Policy</a></li>
-          </ul>
-        </li>
-        <li><a href="Shirts.html">Merchandise</a></li>
-        <li><a href="Photo Gallery.html">Photos</a></li>
-        &nbsp;
-        </ul>
-
-      </div>
-     <div class="  ">&nbsp; &nbsp;
-
-     </div>
-
+      <div class="Nav">
+        <div class="d-flex flex-row bg-grey justify-content-around">
+        <a href="HTML/Calendar.html">Calendar</a>
+        <a href="HTML/classes us.html">Classes</a>
+        <a href="HTML/Forms.html">Forms</a>
+        <a href="HTML/shirts.html">Merchandise</a>
+        <a href="HTML/Photos.html">Photos</a>
+        </div>
+        </div>
+        
      <div class="jumbotron msgAndPicMainDivClass">
       <div class="_msgAndPicMainDivClass">
        
@@ -82,11 +59,11 @@
           <div class="jumbotron Buytickets mt-4 customJumbotron">
             <div class="h7">Amazing plays coming this Summer! Register for a class or buy show tickets, both sell out fast!</div>
             <button type="button" class="btn btn-outline-dark">Frozen</button>
-            <img src="OPT-Frozen-button.png" alt="Frozen">
+            <img src="../IMAGES/OPT-Frozen-button.png" alt="Frozen">
             <button type="button" class="btn btn-outline-dark">Lion King</button>
-            <img src="OPT-LK-button.png" alt="Frozen">
+            <img src="../IMAGES/OPT-LK-button.png" alt="Frozen">
             <button type="button" class="btn btn-outline-dark">Mulan</button>
-            <img src="OPT-Mulan-button.png" alt="Frozen">
+            <img src="../IMAGES/OPT-Mulan-button.png" alt="Frozen">
           </div>
 
           <div class="jumbotron parentClass mt-4 customJumbotron">
@@ -98,28 +75,28 @@
         </div>
         <div class=" mainImageDivClass">
           <div class="card">
-            <img class="card-img-top" src="OPT-FrozenatSTC.jpg" alt="Card image cap">
+            <img class="card-img-top" src="../IMAGES/OPT-FrozenatSTC.jpg" alt="Card image cap">
           </div>
           <div class="card">
-            <img class="card-img-top center" src="OPT-hyenas.jpg" alt="Card image cap">
+            <img class="card-img-top center" src="../IMAGES/OPT-hyenas.jpg" alt="Card image cap">
           </div>
           <div class="card">
-            <img class="card-img-top" src="OPT-LK-kids.jpg" alt="Card image cap" >
+            <img class="card-img-top" src="../IMAGES/OPT-LK-kids.jpg" alt="Card image cap" >
           </div>
           <div class="card">
-            <img class="card-img-top center" src="OPT-LKfaces.jpg" alt="Card image cap">
+            <img class="card-img-top center" src="../IMAGES/OPT-LKfaces.jpg" alt="Card image cap">
           </div>
           <div class="card">
-            <img class="card-img-top center" src="OPT-Mulanbattle.jpg" alt="Card image cap">
+            <img class="card-img-top center" src="../IMAGES/OPT-Mulanbattle.jpg" alt="Card image cap">
           </div>
           <div class="card">
-            <img class="card-img-top center" src="OPT-Olafbeachgp.jpg" alt="Card image cap">
+            <img class="card-img-top center" src="../IMAGES/OPT-Olafbeachgp.jpg" alt="Card image cap">
           </div>
           <div class="card">
-            <img class="card-img-top center" src="OPT-Simba-Nala.jpg" alt="Card image cap">
+            <img class="card-img-top center" src="../IMAGES/OPT-Simba-Nala.jpg" alt="Card image cap">
           </div>
           <div class="card">
-            <img class="card-img-top" src="OPT-Timon-Pumba.jpg" alt="Card image cap" >
+            <img class="card-img-top" src="../IMAGES/OPT-Timon-Pumba.jpg" alt="Card image cap" >
           </div>
 
           <div class=“card">
@@ -132,10 +109,7 @@
               <button type="button" class="btn btn bg-info text-white">View Calendar</button>&nbsp;
               <button type="button" class="btn btn bg-info text-white">View Summer Camps</button>&nbsp;
               <button type="button" class="btn btn-outline-dark">Login | Sign </button>&nbsp;
-              <button type="button" class="btn btn-outline-dark">Forgot passwordJ</button>
-
-
-
+              <button type="button" class="btn btn-outline-dark">Forgot password</button>
             </div>
 
 <hr>
