--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       <!-- mb-5 is a bootstrap class that will set the bottom margin -->
       <div class="Nav">
         <div class="d-flex flex-row bg-grey justify-content-around">
-        <a href="HTML/Calendar.html">Calendar</a>
+        <a href="HTML/calendar.html">Calendar</a>
         <a href="HTML/classes us.html">Classes</a>
-        <a href="HTML/Forms.html">Forms</a>
+        <a href="HTML/forms.html">Forms</a>
         <a href="HTML/shirts.html">Merchandise</a>
-        <a href="HTML/Photos.html">Photos</a>
+        <a href="HTML/photos.html">Photos</a>
         </div>
         </div>
         
