--- a/calendar.html
+++ b/calendar.html
@@ -21,14 +21,14 @@
   <div class="">
     <div class="header">
       <div id="Logo">
-        <img src="IMAGES/PurpleLOGO-01.png" alt="Logo" width="220" height="220">
+        <img src="PurpleLOGO-01.png" alt="Logo" width="220" height="220">
       </div>
       <h1 class="mainHeaderFont">Seedling Theater Company in Henderson, NV</h1>
       <div class="h2">Where young performers are grown</div>
       
       <div class="">
         <div class="calendarClass">
-          <button class="btn btn bg-info text-white" type="button"><i class="bi bi-calendar-check"></i>&nbsp;Calendar</button>
+          <button class="btn btn bg-info text-white" type="button"><i class="bi bi-calendar-check"></i>&nbsp;View Events</button>
         </div>
       </div>
     </div>
