--- a/classes.html
+++ b/classes.html
@@ -13,14 +13,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <title>STC</title>
-  <link href="../CSS/mystyle.css" rel="stylesheet"> </head>
+  <link rel="stylesheet" href="mystyle.css"> </head>
 
 <body>
   <!-- <div class="jumbotron text-left" style="margin-bottom: 0"> -->
   <div class="">
     <div class="header">
       <div id="Logo">
-        <img src="../IMAGES/PurpleLOGO-01.png" alt="Logo" width="220" height="220">
+        <img src="PurpleLOGO-01.png" alt="Logo" width="220" height="220">
       </div>
       <h1 class="mainHeaderFont">Seedling Theater Company in Henderson, NV</h1>
       <div class="h2">Where young performers are grown</div>
