--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <title>STC</title>
-  <link href="../CSS/mystyle.css" rel="stylesheet"> </head>
+  <link rel="stylesheet" href="mystyle.css"> 
+  </head>
 
 <body>
   <!-- <div class="jumbotron text-left" style="margin-bottom: 0"> -->
   <div class="">
     <div class="header">
       <div id="Logo">
-        <img src="../IMAGES/PurpleLOGO-01.png" alt="Logo" width="220" height="220">
+        <img src="PurpleLOGO-01.png" alt="Logo" width="220" height="220">
       </div>
       <h1 class="mainHeaderFont">Seedling Theater Company in Henderson, NV</h1>
       <div class="h2">Where young performers are grown</div>
@@ -35,7 +36,7 @@
       <!-- mb-5 is a bootstrap class that will set the bottom margin -->
       <div class="Nav">
         <div class="d-flex flex-row bg-grey justify-content-around">
-        <a href="HTML/classes.html">Classes</a>
+        <a href="/DraftforSeedling.github.io/classes.html">Classes</a>
         <a href="HTML/calendar.html">Calendar</a>
         <a href="HTML/forms.html">Forms</a>
         <a href="HTML/shirts.html">Merchandise</a>
@@ -59,11 +60,11 @@
           <div class="jumbotron Buytickets mt-4 customJumbotron">
             <div class="h7">Amazing plays coming this Summer! Register for a class or buy show tickets, both sell out fast!</div>
             <button type="button" class="btn btn-outline-dark">Frozen</button>
-            <img src="../IMAGES/OPT-Frozen-button.png" alt="Frozen">
+            <img src="OPT-Frozen-button.png" alt="Frozen">
             <button type="button" class="btn btn-outline-dark">Lion King</button>
-            <img src="../IMAGES/OPT-LK-button.png" alt="Frozen">
+            <img src="OPT-LK-button.png" alt="Frozen">
             <button type="button" class="btn btn-outline-dark">Mulan</button>
-            <img src="../IMAGES/OPT-Mulan-button.png" alt="Frozen">
+            <img src="OPT-Mulan-button.png" alt="Frozen">
           </div>
 
           <div class="jumbotron parentClass mt-4 customJumbotron">
@@ -75,28 +76,28 @@
         </div>
         <div class=" mainImageDivClass">
           <div class="card">
-            <img class="card-img-top" src="../IMAGES/OPT-FrozenatSTC.jpg" alt="Card image cap">
+            <img class="card-img-top" src="OPT-FrozenatSTC.jpg" alt="Card image cap">
           </div>
           <div class="card">
-            <img class="card-img-top center" src="../IMAGES/OPT-hyenas.jpg" alt="Card image cap">
+            <img class="card-img-top center" src="OPT-hyenas.jpg" alt="Card image cap">
           </div>
           <div class="card">
-            <img class="card-img-top" src="../IMAGES/OPT-LK-kids.jpg" alt="Card image cap" >
+            <img class="card-img-top" src="OPT-LK-kids.jpg" alt="Card image cap" >
           </div>
           <div class="card">
-            <img class="card-img-top center" src="../IMAGES/OPT-LKfaces.jpg" alt="Card image cap">
+            <img class="card-img-top center" src="OPT-LKfaces.jpg" alt="Card image cap">
           </div>
           <div class="card">
-            <img class="card-img-top center" src="../IMAGES/OPT-Mulanbattle.jpg" alt="Card image cap">
+            <img class="card-img-top center" src="OPT-Mulanbattle.jpg" alt="Card image cap">
           </div>
           <div class="card">
-            <img class="card-img-top center" src="../IMAGES/OPT-Olafbeachgp.jpg" alt="Card image cap">
+            <img class="card-img-top center" src="OPT-Olafbeachgp.jpg" alt="Card image cap">
           </div>
           <div class="card">
             <img class="card-img-top center" src="../IMAGES/OPT-Simba-Nala.jpg" alt="Card image cap">
           </div>
           <div class="card">
-            <img class="card-img-top" src="../IMAGES/OPT-Timon-Pumba.jpg" alt="Card image cap" >
+            <img class="card-img-top" src="OPT-Timon-Pumba.jpg" alt="Card image cap" >
           </div>
 
           <div class=“card">
