--- a/calendar.html
+++ b/calendar.html
@@ -14,7 +14,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3SlOsibVcOQVnN" crossorigin="anonymous">
   <title>STC</title>
-  <link rel="stylesheet" href="../CSS/mystyle.css"> 
+  <link rel="stylesheet" href="mystyle.css"> 
 
   <title>Accordion test</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
@@ -59,7 +59,7 @@
     <div class="container-fluid">
       <div class="header">
         <div id="Logo">
-          <img src="../IMAGES/PurpleLOGO-01.png" alt="Logo" width="220" height="220">
+          <img src="PurpleLOGO-01.png" alt="Logo" width="220" height="220">
         </div>
         <h1 class="mainHeaderFont">Seedling Theater Company in Henderson, NV</h1>
         <div class="h2">Where young performers are grown</div>
@@ -75,7 +75,7 @@
         <div class="Nav">
           <div class="d-flex flex-row bg-grey justify-content-around">
           <a href="HTML/classes.html">Classes</a>
-          <a href="HTML/calendar.html">Calendar</a>
+          <a href="/DraftforSeedling.github.io/HTML/calendar.html">Calendar</a>
           <a href="HTML/forms.html">Forms</a>
           <a href="HTML/shirts.html">Merchandise</a>
           <a href="HTML/photos.html">Photos</a>
