--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="Nav">
         <div class="d-flex flex-row bg-grey justify-content-around">
         <a href="/DraftforSeedling.github.io/classes.html">Classes</a>
-        <a href="HTML/calendar.html">Calendar</a>
+        <a href="/DraftforSeedling.github.io/calendar.html">Calendar</a>
         <a href="HTML/forms.html">Forms</a>
         <a href="HTML/shirts.html">Merchandise</a>
         <a href="HTML/photos.html">Photos</a>
