--- a/calendar.html
+++ b/calendar.html
@@ -75,7 +75,7 @@
         <div class="Nav">
           <div class="d-flex flex-row bg-grey justify-content-around">
           <a href="HTML/classes.html">Classes</a>
-          <a href="HTML/calendar.html">Calendar</a>
+            <a href="HTML/calendar.html"><b>Calendar</b></a>
           <a href="HTML/forms.html">Forms</a>
           <a href="HTML/shirts.html">Merchandise</a>
           <a href="HTML/photos.html">Photos</a>
