--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <!-- mb-5 is a bootstrap class that will set the bottom margin -->
       <div class="Nav">
         <div class="d-flex flex-row bg-grey justify-content-around">
-        <a href="HTML/classes.html">Classes</a>
+        <a href="/DraftforSeedling.github.io/classes.html">Classes</a>
         <a href="/DraftforSeedling.github.io/calendar.html">Calendar</a>
         <a href="HTML/forms.html">Forms</a>
         <a href="HTML/shirts.html">Merchandise</a>
