--- a/HTML/calendar.html
+++ b/HTML/calendar.html
@@ -14,7 +14,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3SlOsibVcOQVnN" crossorigin="anonymous">
   <title>STC</title>
-  <link rel="stylesheet" href="../CSS/mystyle.css"> 
+  <link rel="stylesheet" href="mystyle.css"> 
 
   <title>Accordion test</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
