--- a/HTML/classes.html
+++ b/HTML/classes.html
@@ -13,14 +13,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <title>STC</title>
-  <link href="../CSS/mystyle.css" rel="stylesheet"> </head>
+  <link rel="stylesheet" rel="mystyle.css"> </head>
 
 <body>
   <!-- <div class="jumbotron text-left" style="margin-bottom: 0"> -->
   <div class="container-fluid">
     <div class="header">
       <div id="Logo">
-        <img src="../IMAGES/PurpleLOGO-01.png" alt="Logo" width="220" height="220">
+        <img src="PurpleLOGO-01.png" alt="Logo" width="220" height="220">
       </div>
       <h1 class="mainHeaderFont">Seedling Theater Company in Henderson, NV</h1>
       <div class="h2">Where young performers are grown</div>
@@ -62,35 +62,35 @@
   <ol class="days list-unstyled">
     <li>
       <div class="date">2</div>
-      <p>Auditions &nbsp; &nbsp;  &nbsp; 7-8 years </p>
+      <p>Auditions 7-8 years </p>
       <div class="event bg-info text-white">Frozen 4pm</div>
       <div class="event bg-info text-white">Lion King 5pm</div>
       <div class="event bg-info text-white">Mulan 6pm</div>
     </li>
     <li>
       <div class="date">3</div>
-      <p>Auditions &nbsp; &nbsp; 9-10 years </p>
+      <p>Auditions 9-10 years </p>
       <div class="event bg-info text-white">Frozen 4pm</div>
       <div class="event bg-info text-white">Lion King 5pm</div>
       <div class="event bg-info text-white">Mulan 6pm</div>
     </li>
     <li>
       <div class="date">4</div>
-      <p>Auditions &nbsp; 11-12 years </p>
+      <p>Auditions 11-12 years </p>
       <div class="event bg-info text-white">Frozen 4pm</div>
       <div class="event bg-info text-white">Lion King 5pm</div>
       <div class="event bg-info text-white">Mulan 6pm</div>
     </li>
     <li>
       <div class="date">5</div>
-      <p>Auditions &nbsp; 13-14 years</p>
+      <p>Auditions 13-14 years</p>
       <div class="event bg-info text-white">Frozen 4pm</div>
       <div class="event bg-info text-white">Lion King 5pm</div>
       <div class="event bg-info text-white">Mulan 6pm</div>
     </li>
     <li>
       <div class="date">6</div>
-      <p>CLASSES &nbsp; 7-8 years</p>
+      <p>CLASSES 7-8 years</p>
       <div class="event bg-info text-white">Frozen 4pm</div>
       <div class="event bg-info text-white">Lion King 5pm</div>
       <div class="event bg-info text-white">Mulan 6pm</div>
