--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <title>STC</title>
-  <link href="../CSS/mystyle.css" rel="stylesheet"> </head>
+  <link rel="stylesheet" href="mystyle.css"> </head>
 
 <body>
   <!-- <div class="jumbotron text-left" style="margin-bottom: 0"> -->
   <div class="container-fluid">
     <div class="header">
       <div id="Logo">
-        <img src="../IMAGES/PurpleLOGO-01.png" alt="Logo" width="220" height="220">
+        <img src="PurpleLOGO-01.png" alt="Logo" width="220" height="220">
       </div>
       <h1 class="mainHeaderFont">Seedling Theater Company in Henderson, NV</h1>
       <div class="h2">Where young performers are grown</div>
@@ -72,7 +72,7 @@
           <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
                      <div class="d-flex justify-content-center">
-                          <img src="../IMAGES/OPT-Olafbeachgp.jpg" alt="First Slide" width="900" height="500">
+                          <img src="OPT-Olafbeachgp.jpg" alt="First Slide" width="900" height="500">
                      </div>      
                          <div class="carousel-caption d-none d-md-block">
                           <div class="Olaf">
@@ -85,7 +85,7 @@
               </div>
               <div class="carousel-item">
                      <div class="d-flex justify-content-center">
-                         <img src="../IMAGES/OPT-hyenas.jpg" alt="Second Slide" width="900" height="500">
+                         <img src="OPT-hyenas.jpg" alt="Second Slide" width="900" height="500">
                      </div>
                       <div class="carousel-caption d-none d-md-block">
                           <div class="Hyenas">
@@ -98,7 +98,7 @@
               </div>
               <div class="carousel-item">
                      <div class="d-flex justify-content-center">
-                         <img src="../IMAGES/OPT-Mulanbattle.jpg" alt="Third Slide" width="900" height="500">
+                         <img src="OPT-Mulanbattle.jpg" alt="Third Slide" width="900" height="500">
                      </div>
                       <div class="carousel-caption d-none d-md-block">
                           <div class="Mulanwarrior">
@@ -129,41 +129,13 @@
       </div>
 
 
-        <!-- <div class="Save to create Photo Gallery page">
-        <div class=" mainImageDivClass">
-          <div class="card">
-            <img class="card-img-top" src="../IMAGES/OPT-FrozenatSTC.jpg" alt="Card image cap">
-          </div>
-          <div class="card">
-            <img class="card-img-top center" src="../IMAGES/OPT-hyenas.jpg" alt="Card image cap">
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="../IMAGES/OPT-LK-kids.jpg" alt="Card image cap" >
-          </div>
-          <div class="card">
-            <img class="card-img-top center" src="../IMAGES/OPT-LKfaces.jpg" alt="Card image cap">
-          </div>
-          <div class="card">
-            <img class="card-img-top center" src="../IMAGES/OPT-Mulanbattle.jpg" alt="Card image cap">
-          </div>
-          <div class="card">
-            <img class="card-img-top center" src="../IMAGES/OPT-Olafbeachgp.jpg" alt="Card image cap">
-          </div>
-          <div class="card">
-            <img class="card-img-top center" src="../IMAGES/OPT-Simba-Nala.jpg" alt="Card image cap">
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="../IMAGES/OPT-Timon-Pumba.jpg" alt="Card image cap" >
-          </div>
-        -->
-
         <section class="container content-section">
           <h2 class="section-header">Exciting shows coming this Summer!</h2>
           <div class="shop-items">
             <div class="shop-item">
               <span class="shop-item-title">Frozen - Admission Tickets</span>
               <span class="shop-item-title">Shows: June 22 at 2pm, 4pm & 6pm</span>
-              <img class="shop-item-image" src="../IMAGES/OPT-Frozen-button.png">
+              <img class="shop-item-image" src="OPT-Frozen-button.png">
               <div class="shop-item-details">
                 <span class="shop-item-price">$25.00</span>
                 <input class="cart-quantity-input" type="number" value="1">
@@ -174,7 +146,7 @@
             <div class="shop-item">
               <span class="shop-item-title">Lion King - Admission Tickets</span>
               <span class="shop-item-title">Shows: June 23 at 2pm, 4pm & 6pm</span>
-              <img class="shop-item-image" src="../IMAGES/OPT-LK-button.png">
+              <img class="shop-item-image" src="OPT-LK-button.png">
               <div class="shop-item-details">
                 <span class="shop-item-price">$25.00</span>
                 <input class="cart-quantity-input" type="number" value="1">
@@ -185,7 +157,7 @@
             <div class="shop-item">
               <span class="shop-item-title">Mulan - Admission Tickets</span>
               <span class="shop-item-title">Shows: June 24 at 2pm, 4pm & 6pm</span>
-              <img class="shop-item-image" src="../IMAGES/OPT-Mulan-button.png">
+              <img class="shop-item-image" src="OPT-Mulan-button.png">
               <div class="shop-item-details">
                 <span class="shop-item-price">$25.00</span>
                 <input class="cart-quantity-input" type="number" value="1">
@@ -196,7 +168,7 @@
             <div class="shop-item">
               <span class="shop-item-title">Little Women - Admission Tickets</span>
               <span class="shop-item-title">Shows: July 27 at 10am, 12pm & 2pm</span>
-              <img class="shop-item-image" src="../IMAGES/OPT-LilWomen-button.jpg">
+              <img class="shop-item-image" src="OPT-LilWomen-button.jpg">
               <div class="shop-item-details">
                 <span class="shop-item-price">$25.00</span>
                 <input class="cart-quantity-input" type="number" value="1">
@@ -207,7 +179,7 @@
             <div class="shop-item">
               <span class="shop-item-title">Wizard of Oz - Admission Tickets</span>
               <span class="shop-item-title">Shows: July 28 at 12pm, 2pm & 4pm</span>
-              <img class="shop-item-image" src="../IMAGES/OPT-WizOz-button.jpg">
+              <img class="shop-item-image" src="OPT-WizOz-button.jpg">
               <div class="shop-item-details">
                 <span class="shop-item-price">$25.00</span>
                 <input class="cart-quantity-input" type="number" value="1">
@@ -218,7 +190,7 @@
             <div class="shop-item">
               <span class="shop-item-title">Munchkins - Admission Tickets</span>
               <span class="shop-item-title">Shows: July 29 at 12pm & 2pm</span>
-              <img class="shop-item-image" src="../IMAGES/OPT-Munchkin2-button.jpg">
+              <img class="shop-item-image" src="OPT-Munchkin2-button.jpg">
               <div class="shop-item-details">
                 <span class="shop-item-price">$25.00</span>
                 <input class="cart-quantity-input" type="number" value="1">
