--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <title>STC</title>
-  <link rel="stylesheet" href="mystyle.css"> </head>
+  <link rel="stylesheet" href="mystyle.css"> 
+  </head>
 
 <body>
-  <!-- <div class="jumbotron text-left" style="margin-bottom: 0"> -->
+  <a href="/DraftforSeedling/classes.html">Classes</a>
   <div class="container-fluid">
     <div class="header">
       <div id="Logo">
