--- a/classes.html
+++ b/classes.html
@@ -13,10 +13,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <title>STC</title>
-  <link rel="stylesheet" href="mystyle.css"> </head>
+  <a href= "/DraftforSeedling/classes.html>classes</a>
+  <link rel="stylesheet" href="mystyle.css"> 
+                                           </head>
 
 <body>
-  <!-- <div class="jumbotron text-left" style="margin-bottom: 0"> -->
+ 
   <div class="container-fluid">
     <div class="header">
       <div id="Logo">
@@ -32,7 +34,7 @@
       </div>
     </div>
     <div class="content">
-      <!-- mb-5 is a bootstrap class that will set the bottom margin -->
+      
       <div class="Nav">
         <div class="d-flex flex-row bg-grey justify-content-around">
         <a href="HTML/classes.html"><b>Classes</b></a>
