--- a/store.html
+++ b/store.html
@@ -13,12 +13,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <title>STC</title>
+  <a href="/DraftforSeedling/store.html">online store</a>
   <link rel="stylesheet" href="mystyle.css"> 
 
 </head>
 
 <body>
-  <!-- <div class="jumbotron text-left" style="margin-bottom: 0"> -->
+ 
   <div class="container-fluid">
     <div class="header">
       <div id="Logo">
